# capnproto-rust

./: .travis.yml  Cargo.toml
capnp/: Cargo.toml
capnp-futures/: Cargo.toml
capnp-futures/src/: serialize.rs  write_queue.rs
capnp-futures/test/: Cargo.toml  test.rs
capnp-rpc/: Cargo.toml
capnp-rpc/examples/calculator/: Cargo.toml
capnp-rpc/examples/http-requests/: Cargo.toml
capnp-rpc/examples/http-requests/src/: client.rs  server.rs
capnp-rpc/examples/pubsub/: Cargo.toml  server.rs
capnp-rpc/src/: rpc.rs  split.rs  task_set.rs  twoparty.rs
capnp-rpc/test/: Cargo.toml
capnpc/src/: codegen.rs
