[package]
name = "capnp-futures"
version = "0.11.0-alpha.0"
authors = [ "David Renshaw <drenshaw@gmail.com>" ]
license = "MIT"

description = "async serialization for Cap'n Proto messages"
repository = "https://github.com/dwrensha/capnproto-rust"
documentation = "https://docs.capnproto-rust.org/capnp_futures/"
edition = "2018"

keywords = ["async"]

[dependencies]
capnp = { version = "0.11.0-alpha", path = "../capnp" }
futures-preview = "0.3.0-alpha.16"

[dev-dependencies]
capnp = { version = "0.11.0-alpha", path = "../capnp", features = ["quickcheck"] }
quickcheck = "0.2"
