[package]
name = "capnp-http-requests"
version = "0.1.0"
authors = ["David Renshaw <david@sandstorm.io>"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "http-requests"
path = "src/main.rs"

[build-dependencies]
capnpc = { path = "../../../capnpc" }

[dependencies]
capnp = { path = "../../../capnp" }
futures = "0.3.0"
hyper = { git = "https://github.com/hyperium/hyper" }
tokio = { git = "https://github.com/tokio-rs/tokio", features = ["rt-current-thread"]}
futures-tokio-compat = { git = "https://github.com/Nemo157/futures-tokio-compat" }

[dependencies.capnp-rpc]
path = "../.."
