[package]
name = "pubsub"
version = "0.1.0"
authors = ["David Renshaw <david@sandstorm.io>"]
edition = "2018"

build = "build.rs"

[[bin]]
name = "pubsub"
path = "main.rs"

[build-dependencies]
capnpc = { path = "../../../capnpc" }

[dependencies]
capnp = { path = "../../../capnp" }
futures-preview = "0.3.0-alpha.18"
romio = "0.3.0-alpha.10"

[dependencies.capnp-rpc]
path = "../.."
